--- a/docs/en/ml/limitations.asciidoc
+++ b/docs/en/ml/limitations.asciidoc
@@ -8,10 +8,9 @@ The following limitations and known problems apply to the {version} release of
 === Pop-ups must be enabled in browsers
 //See x-pack-elasticsearch/#844
 
-The {xpackml} features in Kibana use pop-ups. You must configure your
+The {xpackml} features in {kib} use pop-ups. You must configure your
 web browser so that it does not block pop-up windows or create an
-exception for your Kibana URL.
-
+exception for your {kib} URL.
 
 [float]
 === Jobs must be re-created at GA
@@ -23,6 +22,14 @@ re-create your jobs. If you have data sets and job configurations that
 you work with extensively in the beta, make note of all the details so
 that you can re-create them successfully.
 
+[float]
+=== {xpackml} features do not support cross cluster search
+
+You cannot use cross cluster search in either the {ml} APIs or the {ml}
+features in {kib}.
+
+For more information about cross cluster search,
+see {ref}/modules-cross-cluster-search.html[Cross Cluster Search].
 
 [float]
 === Anomaly Explorer omissions and limitations
