[DOCS] Require job to have explicit data_description (elastic/x-pack-elasticsearch#1445)
* [DOCS] Require job to have explicit data_description

* [DOCS] Fix typo in put-job.asciidoc

Original commit: elastic/x-pack-elasticsearch@e7fbbff7eb775a0b891bf2f0d01949038971eb26

--- a/docs/en/rest-api/ml/put-job.asciidoc
+++ b/docs/en/rest-api/ml/put-job.asciidoc
@@ -25,9 +25,9 @@ The create job API enables you to instantiate a job.
 `analysis_limits`::
   Optionally specifies runtime limits for the job. See <<ml-apilimits,analysis limits>>.
 
-`data_description`::
-  (object) Describes the format of the input data.
-  See <<ml-datadescription,data description objects>>.
+`data_description` (required)::
+  (object) Describes the format of the input data. This object is required, but
+  it can be empty (`{}`). See <<ml-datadescription,data description objects>>.
 
 `description`::
   (string) An optional description of the job.
