[DOCS] Clarify model snapshots (elastic/x-pack-elasticsearch#1447)
Original commit: elastic/x-pack-elasticsearch@55f307cf89c0fcc31599c195a4b82ac822850396

--- a/docs/en/rest-api/ml/jobresource.asciidoc
+++ b/docs/en/rest-api/ml/jobresource.asciidoc
@@ -49,6 +49,7 @@ so do not set the `background_persist_interval` value too low.
 `model_snapshot_id`::
   (string) A numerical character string that uniquely identifies the model
   snapshot. For example, `1491007364`.
+  For more information about model snapshots, see <<ml-snapshot-resource>>.
 
 `model_snapshot_retention_days`::
   (long) The time in days that model snapshots are retained for the job.
