Remove file scripts (elastic/x-pack-elasticsearch#1399)
This is the xpack side of elastic/elasticsearch#24627


Original commit: elastic/x-pack-elasticsearch@4d1c745d74dfa77798c4af40a1a8e8411503d6e4

--- a/docs/en/watcher/condition/script.asciidoc
+++ b/docs/en/watcher/condition/script.asciidoc
@@ -72,7 +72,7 @@ file:
 --------------------------------------------------
 "condition" : {
   "script" : {
-    "file" : "my_script"
+    "id" : "my_script"
   }
 }
 --------------------------------------------------
@@ -84,7 +84,7 @@ script language and parameters:
 --------------------------------------------------
 "condition" : {
   "script" : {
-    "file" : "my_script",
+    "id" : "my_script",
     "lang" : "javascript",
     "params" : {
       "result" : true
